--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,34 +30,26 @@ android {
 dependencies {
 
     dependencies {
-        implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
+        def room_version = "2.3.0"
 
-        // Dependencies for working with Architecture components
-        // You'll probably have to update the version numbers in build.gradle (Project)
+        implementation "androidx.room:room-runtime:$room_version"
+        annotationProcessor "androidx.room:room-compiler:$room_version"
 
-        // Room components
-        implementation "androidx.room:room-runtime:$rootProject.roomVersion"
-        annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
-        androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+        // optional - RxJava2 support for Room
+        implementation "androidx.room:room-rxjava2:$room_version"
 
-        // Lifecycle components
-        implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.lifecycleVersion"
-        implementation "androidx.lifecycle:lifecycle-livedata:$rootProject.lifecycleVersion"
-        implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycleVersion"
+        // optional - RxJava3 support for Room
+        implementation "androidx.room:room-rxjava3:$room_version"
 
-        // UI
-        implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
-        implementation "com.google.android.material:material:$rootProject.materialVersion"
+        // optional - Guava support for Room, including Optional and ListenableFuture
+        implementation "androidx.room:room-guava:$room_version"
 
-        // Testing
-        testImplementation "junit:junit:$rootProject.junitVersion"
-        androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
-        androidTestImplementation ("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
-            exclude group: 'com.android.support', module: 'support-annotations'
-        })
-        androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
+        // optional - Test helpers
+        testImplementation "androidx.room:room-testing:$room_version"
+
+        // optional - Paging 3 Integration
+        implementation "androidx.room:room-paging:2.4.0-alpha04"
     }
-
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
